# album-of-the-day

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  data_patch_1.py  data_patch_2.py  data_warnings.py  detect_data_gaps.py  dynamically_create_album_image_test.py  extract_text_from_images.py  ocr_output_preview.py  prettier_format.py  requirements.txt  trim_whitespace.py
album_image_util/: README.md  pyproject.toml
album_image_util/album_image_util/: template_image_data.py  util.py
last_fm_api_client/: README.md  pyproject.toml
last_fm_api_client/examples/: retrieve_album.py  retrieve_artist_details.py  retrieve_scrobbles.py  retrieve_tag.py
last_fm_api_client/last_fm_api_client/: client.py  models.py
spotify_api_client/: README.md  pyproject.toml
spotify_api_client/spotify_api_client/: client.py
website/backend/album_of_the_day_backend/: README.md  debug_environment.py  expand-environment-files.sh  load_dotenv.py  load_dotenv_to_bash.py  prepare-environment-and-expand-files.sh  pyproject.toml
website/backend/album_of_the_day_backend/album_of_the_day_backend/: .gitignore  import_albums_from_json.py  manage.py
website/backend/album_of_the_day_backend/album_of_the_day_backend/album_of_the_day/: asgi.py  expand_files_from_environment.py  rest_framework_settings.py  settings.py  startup.py  urls.py  wsgi.py
website/backend/album_of_the_day_backend/album_of_the_day_backend/website/: admin.py  api_exceptions.py  models.py  permissions.py  views.py
website/backend/album_of_the_day_backend/album_of_the_day_backend/website/discord_bot/: README.md  main.py
website/backend/album_of_the_day_backend/album_of_the_day_backend/website/discord_bot/commands/: create_album_of_the_day.py  create_list.py  generic.py  utilities.py
website/backend/album_of_the_day_backend/album_of_the_day_backend/website/static/: index.css
website/backend/album_of_the_day_backend/album_of_the_day_backend/website/tasks/: README.md  update_album_covers.py  update_daily_rotations.py  update_genre_descriptions.py  update_spotify_uids.py  util.py
website/backend/album_of_the_day_backend/album_of_the_day_backend/website/tasks/systemd/: update_album_covers.service  update_album_covers.timer  (+6 more)
website/backend/album_of_the_day_backend/album_of_the_day_backend/website/templates/: index.html
(+106 files in other folders)
