[tool.poetry]
name = "last-fm-api-client"
version = "0.2.5"
description = ""
authors = ["William04A <35110380+William04A@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "last_fm_api_client"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
